--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "dotenv": "^17.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
